k8s/frontend-ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prodstore-ingress
spec:
  rules:
  - host: frontend.40.82.154.170.nip.io
    http:
      paths:
      - backend:
          serviceName: ui-service
          servicePort: 80
        path: /
